[workspace]
resolver = "2"
members = [
    "crates/rehyke-core",
    "crates/rehyke-cli",
    "crates/rehyke-python",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/rehyke"
description = "Crawl Everything. Miss Nothing. Ultra-high-performance web crawler."

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "zstd", "cookies", "socks", "rustls-tls"] }
scraper = "0.20"
html5ever = "0.29"
quick-xml = { version = "0.36", features = ["serialize"] }
url = "2"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
crossbeam = "0.8"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
governor = "0.7"
mime = "0.3"
mime_guess = "2"
encoding_rs = "0.8"
rand = "0.8"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
