[package]
name = "rehyke-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core engine for Rehyke web crawler"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
html5ever = { workspace = true }
quick-xml = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
governor = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
encoding_rs = { workspace = true }
rand = { workspace = true }
chromiumoxide = { workspace = true, optional = true }

[features]
default = []
js = ["dep:chromiumoxide"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[[example]]
name = "basic_crawl"
path = "../../examples/basic_crawl.rs"

[[example]]
name = "deep_crawl"
path = "../../examples/deep_crawl.rs"

[[example]]
name = "regex_extraction"
path = "../../examples/regex_extraction.rs"

[[example]]
name = "content_pipeline"
path = "../../examples/content_pipeline.rs"

[[example]]
name = "js_render"
path = "../../examples/js_render.rs"
required-features = ["js"]

[[example]]
name = "spa_crawl"
path = "../../examples/spa_crawl.rs"
required-features = ["js"]

[[example]]
name = "screenshot_capture"
path = "../../examples/screenshot_capture.rs"
required-features = ["js"]
